New Crowdin updates (#3234)
* New translations strings.xml (Norwegian Bokmal)

* New translations strings.xml (Norwegian Bokmal)

* New translations strings.xml (Slovak)

* New translations strings.xml (Slovak)

* Update source file strings.xml

* Update source file strings.xml

* Update source file strings.xml

* Update source file strings.xml

* Update source file strings.xml

* New translations strings.xml (Italian)

* New translations strings.xml (Norwegian Bokmal)

* New translations strings.xml (Turkish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Turkish)

* Update source file strings.xml

* New translations strings.xml (Italian)

* New translations strings.xml (Norwegian Bokmal)

* New translations strings.xml (Czech)

* New translations strings.xml (Czech)

* New translations strings.xml (Russian)

* New translations strings.xml (Russian)

* New translations strings.xml (Russian)

* New translations strings.xml (Russian)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Czech)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Polish)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Turkish)

* New translations strings.xml (Norwegian Bokmal)

* New translations strings.xml (Norwegian Bokmal)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Bulgarian)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (German)



--- a/plugins/sync/src/main/res/values-iw-rIL/strings.xml
+++ b/plugins/sync/src/main/res/values-iw-rIL/strings.xml
@@ -121,7 +121,8 @@
     <!-- GarminPlugin -->
     <string name="garmin">Garmin</string>
     <string name="garmin_description">חיבור למכשיר Garmin</string>
-    <string name="key_garmin_settings">הגדרות Garmin</string>
+    <string name="garmin_local_http_server_port">פורט שרת HTTP מקומי</string>
+    <string name="garmin_local_http_server">שרת HTTP מקומי</string>
     <!--    Wear-->
     <string name="description_wear">ניטור ושליטה ב-AndroidAPS באמצעות שעון WearOS.</string>
     <string name="no_watch_connected">(השעון לא מחובר)</string>
