--- a/plugins/aps/src/main/res/values-nb-rNO/strings.xml
+++ b/plugins/aps/src/main/res/values-nb-rNO/strings.xml
@@ -120,6 +120,7 @@
     <string name="fallback_smb_no_tdd">Går tilbake til SMB. Ikke nok data om total daglig dose.</string>
     <string name="fallback_to_isf_no_tdd">Faller tilbake til profilsensitivitet. Ikke nok TDD-data.</string>
     <!-- Autotune -->
+    <string name="autotune_description">Hjelp til potensiell justering av profilen (ISF, IK og basaldoser)</string>
     <string name="autotune_shortname">AT</string>
     <string name="autotune_settings">Autotune innstillinger</string>
     <string name="autotune_auto_title">Automatisering profilbytte</string>
@@ -159,4 +160,6 @@
     <string name="autotune_update_local_profile_message">Oppdater %1$s profil med Autotune-profil?</string>
     <string name="autotune_revert_local_profile_message">Tilbakestill %1$s profil med inngangsprofil?</string>
     <string name="autotune_profile_invalid">Ugyldig profil</string>
+    <string name="not_available_full">Ikke tilgjengelig</string>
+    <string name="pump_disconnected">Pumpe frakoblet</string>
 </resources>
