--- a/plugins/aps/src/main/res/values-ru-rRU/strings.xml
+++ b/plugins/aps/src/main/res/values-ru-rRU/strings.xml
@@ -8,7 +8,7 @@
     <string name="high_temptarget_raises_sensitivity_summary"><![CDATA[Повысить чувствительность для temptargets > = 100]]></string>
     <string name="low_temptarget_lowers_sensitivity_title">Низкая ВЦ снижает чувствительность</string>
     <string name="low_temptarget_lowers_sensitivity_summary"><![CDATA[Понизить чувствительность для temptargets > = 100]]></string>
-    <string name="openapssmb">OpenAPS СМБ</string>
+    <string name="openapssmb">OpenAPS SMB</string>
     <string name="openaps_smb_dynamic_isf">Динамический ISF</string>
     <string name="smb_interval_summary">Как часто SMB будут подаваться в минутах</string>
     <string name="resistance_lowers_target_title">Резистентность понижает цель</string>
@@ -117,9 +117,10 @@
     <string name="loop_smb_set_by_pump_label">Супер микро болюс SMB задан помпой</string>
     <string name="loop_open_mode_min_change">Минимальный запрос на изменения [%]</string>
     <string name="loop_open_mode_min_change_summary" formatted="false">Алгоритм ИПЖ выдаст всплывающее окно с запросом на новые изменения, только если изменение больше, чем это значение в %. Значение по умолчанию — 20%</string>
-    <string name="fallback_smb_no_tdd">Возврат к СМБ. Недостаточно данных TDD.</string>
+    <string name="fallback_smb_no_tdd">Возврат к SMB. Недостаточно данных TDD.</string>
     <string name="fallback_to_isf_no_tdd">Откат к чувствительности профиля. Недостаточно данных TDD.</string>
     <!-- Autotune -->
+    <string name="autotune_description">Помощь в возможной корректировке профиля (ISF, IC, базал)</string>
     <string name="autotune_shortname">АвтТюн</string>
     <string name="autotune_settings">Настройки Autotune</string>
     <string name="autotune_auto_title">Профили Автонастройки </string>
@@ -159,4 +160,6 @@
     <string name="autotune_update_local_profile_message">Обновить профиль %1$s профилем Autotune?</string>
     <string name="autotune_revert_local_profile_message">Восстановить профиль %1$s с помощью входного профиля?</string>
     <string name="autotune_profile_invalid">Неверный профиль</string>
+    <string name="not_available_full">Недоступно</string>
+    <string name="pump_disconnected">Помпа отключена</string>
 </resources>
