--- a/plugins/aps/src/main/res/values-tr-rTR/strings.xml
+++ b/plugins/aps/src/main/res/values-tr-rTR/strings.xml
@@ -121,6 +121,7 @@ Aktif Karbonhidratın ne kadar hızlı sindirildiğine ve KŞ\'nin beklenenden d
     <string name="fallback_smb_no_tdd">SMB\'ye dönülüyor. Yeterli günlük doz verisi yok.</string>
     <string name="fallback_to_isf_no_tdd">Profil duyarlılığına geri dönüş. Yeterli GTD verisi yok.</string>
     <!-- Autotune -->
+    <string name="autotune_description">Potansiyel profil ayarlamaları için yardım (İDF, karbonhidrat ve bazal oranları)</string>
     <string name="autotune_shortname">AT</string>
     <string name="autotune_settings">OtoAyar ayarları</string>
     <string name="autotune_auto_title">Otomasyon Profil değişimi</string>
@@ -160,4 +161,6 @@ Aktif Karbonhidratın ne kadar hızlı sindirildiğine ve KŞ\'nin beklenenden d
     <string name="autotune_update_local_profile_message">OtoAyar Profili ile %1$s profili güncellensin mi?</string>
     <string name="autotune_revert_local_profile_message">Giriş Profili ile %1$s profili geri alınsın mı?</string>
     <string name="autotune_profile_invalid">Profil geçersiz</string>
+    <string name="not_available_full">Mevcut değil</string>
+    <string name="pump_disconnected">Pompa bağlantısı kesildi</string>
 </resources>
