--- a/plugins/sync/src/main/res/values-ru-rRU/strings.xml
+++ b/plugins/sync/src/main/res/values-ru-rRU/strings.xml
@@ -123,7 +123,6 @@
     <!-- GarminPlugin -->
     <string name="garmin">Garmin</string>
     <string name="garmin_description">Подключение к устройству Garmin (Fenix, Edge, …)</string>
-    <string name="key_garmin_settings">Настройки Garmin</string>
     <!--    Wear-->
     <string name="wear_shortname">WEAR</string>
     <string name="description_wear">Мониторить и контролировать AAPS при помощи часов WearOS.</string>
@@ -148,8 +147,8 @@
     <string name="wearcontrol_summary">Ставить временные цели и вводить терапию с часов.</string>
     <string name="wear_wizard_settings_summary">Расчеты включены в результат калькулятора: </string>
     <string name="wear_general_settings">Общие настройки</string>
-    <string name="wear_notifysmb_title">Оповещать об СМБ</string>
-    <string name="wear_notifysmb_summary">Показывать СМБ на часах как стандартный болюс.</string>
+    <string name="wear_notifysmb_title">Оповещать об SMB</string>
+    <string name="wear_notifysmb_summary">Показывать SMB на часах как стандартный болюс.</string>
     <string name="wear_custom_watchface_settings">Настройка циферблатов</string>
     <string name="wear_custom_watchface_authorization_title">Авторизация пользовательских циферблатов</string>
     <string name="wear_custom_watchface_authorization_summary">Авторизовать загруженные пользовательские циферблаты для изменения и блокировки некоторых параметров отображения часов в соответствии с дизайном часов</string>
