--- a/plugins/sync/src/main/res/values-tr-rTR/strings.xml
+++ b/plugins/sync/src/main/res/values-tr-rTR/strings.xml
@@ -123,7 +123,8 @@
     <!-- GarminPlugin -->
     <string name="garmin">Garmin</string>
     <string name="garmin_description">Garmin cihazına bağlantı (Fenix, Edge,…)</string>
-    <string name="key_garmin_settings">Garmin ayarları</string>
+    <string name="garmin_local_http_server_port">Yerel HTTP sunucusu bağlantı noktası</string>
+    <string name="garmin_local_http_server">Yerel HTTP sunucusu</string>
     <!--    Wear-->
     <string name="wear_shortname">WEAR</string>
     <string name="description_wear">WearOS saatinizi kullanarak AAPS\'yi izleyin ve kontrol edin.</string>
