--- a/plugins/sync/src/main/res/values-sk-rSK/strings.xml
+++ b/plugins/sync/src/main/res/values-sk-rSK/strings.xml
@@ -100,7 +100,6 @@
     <string name="not_connected">Nepripojené</string>
     <string name="read_only">Iba na čítanie</string>
     <string name="working">Pracujem</string>
-    <!-- xDrip status line -->
     <!-- Xdrip StatusLine -->
     <string name="xdrip">xDrip+</string>
     <string name="xdrip_shortname">XD</string>
@@ -123,6 +122,8 @@
     <!-- GarminPlugin -->
     <string name="garmin">Garmin</string>
     <string name="garmin_description">Pripájanie k zariadeniu Garmin (Fénix, Edge, ...)</string>
+    <string name="garmin_local_http_server_port">Port lokálneho HTTP servera</string>
+    <string name="garmin_local_http_server">Lokálny HTTP server</string>
     <!--    Wear-->
     <string name="wear_shortname">WEAR</string>
     <string name="description_wear">Zobrazovanie stavu a riadenie AndroidAPS z hodiniek s WearOS.</string>
