--- a/plugins/aps/src/main/res/values-nl-rNL/strings.xml
+++ b/plugins/aps/src/main/res/values-nl-rNL/strings.xml
@@ -2,6 +2,8 @@
 <resources>
     <string name="dynisf_adjust_sensitivity">Inschakelen van TDD gebaseerde gevoeligheid ratio voor basaal en glucose doel aanpassingen</string>
     <string name="dynisf_adjust_sensitivity_summary">Gebruikt de laatste 24u TDD/7D om de gevoeligheid te berekenen voor het verhogen of verlagen van de basaalstand en past het glucosedoel aan als deze opties zijn ingeschakeld, op dezelfde manier als Autosens dat doet. Advies is om te starten met deze optie uitgeschakeld</string>
+    <string name="dyn_isf_adjust_title" formatted="false">DynamicISF Aanpassing Factor %</string>
+    <string name="dyn_isf_adjust_summary" formatted="false">Aanpassingsfactor voor DynamicISF. Stel meer dan 100% in voor een agressievere correctie en minder dan 100% voor minder agressieve correctie.</string>
     <string name="high_temptarget_raises_sensitivity_title">Hoog tijdelijk streefdoel verhoogt gevoeligheid</string>
     <string name="high_temptarget_raises_sensitivity_summary"><![CDATA[Verhogen van de gevoeligheid voor temptargets > = 100]]></string>
     <string name="low_temptarget_lowers_sensitivity_title">Laag tijdelijk streefdoel verlaagt gevoeligheid</string>
@@ -118,6 +120,7 @@
     <string name="fallback_smb_no_tdd">Terugvallen naar SMB. Niet genoeg TDD gegevens.</string>
     <string name="fallback_to_isf_no_tdd">Terugval naar profiel gevoeligheid. Onvoldoende TDD gegevens.</string>
     <!-- Autotune -->
+    <string name="autotune_description">Hulp voor mogelijke aanpassingen van het profiel (ISF, koolhydraten en basaal insuline)</string>
     <string name="autotune_shortname">AT</string>
     <string name="autotune_settings">Autotune instellingen</string>
     <string name="autotune_auto_title">Automatisering Profiel Wissel</string>
@@ -157,4 +160,5 @@
     <string name="autotune_update_local_profile_message">Profiel %1$s bijwerken met Autotune Profiel?</string>
     <string name="autotune_revert_local_profile_message">Profiel %1$s terugzetten met invoerprofiel?</string>
     <string name="autotune_profile_invalid">Profiel ongeldig</string>
+    <string name="not_available_full">Niet beschikbaar</string>
 </resources>
