--- a/pump/equil/src/main/res/values-nl-rNL/strings.xml
+++ b/pump/equil/src/main/res/values-nl-rNL/strings.xml
@@ -9,6 +9,8 @@
     <string name="equil_btn_skip">Overslaan</string>
     <string name="equil_date_device">Laatste verbinding</string>
     <string name="equil_dressing">Vervang reservoir</string>
+    <string name="equil_dressing_onkey_msg">De zuiger automatisch naar de bodem van het reservoir aan het verplaatsen. Deze zal automatisch stoppen in de eindstand. Klik op \'Stop\' om te onderbreken indien nodig.</string>
+    <string name="equil_finish">Voltooid</string>
     <string name="equil_next">Volgende</string>
     <string name="equil_hint_dressing">Deze operatie zal de toediening van de insuline stopzetten en de zuiger van de pomp terugplaatsen naar de bodem van het reservoir!</string>
     <string name="equil_history">Geschiedenis</string>
@@ -19,6 +21,7 @@
     <string name="equil_mode_suspended">Onderbroken</string>
     <string name="equil_serialnumber">Apparaat nummer</string>
     <string name="equil_stop">Stop</string>
+    <string name="equil_success">Succes</string>
     <string name="equil_title_dressing">Vervang ampul</string>
     <string name="equil_title_history_events">Historie gebeurtenissen</string>
     <string name="equil_title_tips">Tips</string>
@@ -28,17 +31,34 @@
     <string name="equil_tone_mode_tone">Alleen toon</string>
     <string name="equil_tone_mode_tone_and_shake">Trillen en geluid</string>
     <string name="equil_unit_u">%1$s E</string>
+    <string name="equil_unit_u_hours">%1$s E/u</string>
     <string name="equil_error_no_devices">Geen apparaat</string>
     <string name="equil_ble_config_confirmation_title">Koppel Equil patch pomp</string>
+    <string name="equil_pair">Koppel</string>
+    <string name="equil_pair_error">Koppel fout</string>
+    <string name="equil_air">Verwijder lucht</string>
     <string name="equil_temp_basal_rate">Tijdelijk basaal</string>
+    <string name="equil_total_delivered">Totaal toegediend</string>
+    <string name="equil_last_bolus">Laatste bolus</string>
+    <string name="equil_firmware_version">Firmwareversie</string>
+    <string name="equil_shutdown">Equil auto uit</string>
+    <string name="equil_common_history_tbr_value">Snelheid: %1$.2f E/u, duur: %2$d minuten</string>
+    <string name="equil_common_history_bolus_value">%1$.2f E</string>
+    <string name="equil_history_type">Type：</string>
     <!-- equil - Commands -->
+    <string name="equil_common_cmd_set_bolus">Bolus instellen</string>
     <string name="equil_common_cmd_cancel_bolus">Annuleer Bolus</string>
+    <string name="equil_common_cmd_set_tbr">Tijdelijke basaal instellen</string>
     <string name="equil_common_cmd_cancel_tbr">Tijdelijk basaal annuleren</string>
     <string name="equil_common_cmd_set_basal_schedule">Basaalprofiel instellen</string>
     <string name="equil_common_cmd_get_status">Equil status ophalen</string>
+    <string name="equil_common_cmd_set_time">Tijd instellen</string>
     <string name="equil_common_cmd_suspend_delivery">Onderbreek toediening</string>
     <string name="equil_common_cmd_resume_delivery">Hervat toediening</string>
+    <string name="equil_common_cmd_pair">Koppel Equil</string>
     <string name="equil_common_cmd_insert_cannula">Canule inbrengen</string>
+    <string name="equil_common_cmd_unpair">Ontkoppel Equil</string>
+    <string name="equil_common_cmd_alarm">Alarm</string>
     <string name="equil_common_cmd_set_extended_bolus">Vertraagde bolus instellen</string>
     <string name="equil_common_cmd_cancel_extended_bolus">Annuleer vertraagde bolus</string>
     <!--    推杆回退-->
@@ -47,11 +67,42 @@
     <string name="history_manual_confirm">Handmatig bevestigen</string>
     <string name="equil_command_not_found">Geen apparaat gevonden</string>
     <string name="equil_command_connect_error">Pomp verbindingsfout</string>
+    <string name="equil_command_connect_no_response">Geen reactie van de pomp</string>
     <string name="equil_password_title">Pomp wachtwoord</string>
     <string name="equil_settings">Instellingen</string>
     <string name="equil_settings_alarm_battery">Alarm bij bijna lege batterij</string>
     <string name="equil_settings_alarm_insulin">Alarm bij bijna leeg reservoir</string>
     <string name="equil_init_insulin_error">Initialisatie van het reservoir is niet voltooid</string>
+    <string name="equil_history_group_all">Alles</string>
+    <string name="equil_history_group_pair">Koppelen</string>
+    <string name="equil_history_group_bolus">Bolussen</string>
+    <string name="equil_history_group_basal">Basalen</string>
+    <string name="equil_history_group_prime">Voorvullen</string>
+    <string name="equil_history_group_configuration">Instellingen</string>
+    <string name="equil_tab_action">Actie geschiedenis</string>
+    <string name="equil_tab_equil">Equil geschiedenis</string>
+    <string name="equil_password_error">Equil koppelwachtwoord is onjuist</string>
+    <string name="equil_none">geen</string>
+    <string name="equil_history_item1">Reservoir-Laag insuline niveau</string>
+    <string name="equil_history_item3">Toedienings blokkade gedetecteerd</string>
+    <string name="equil_history_item4">Motor Omkering gedetecteerd</string>
+    <string name="equil_history_item5">Motor storing gedetecteerd</string>
+    <string name="equil_history_item7">Injectie al gepauzeerd</string>
+    <string name="equil_history_item9">Automatisch uit!</string>
+    <string name="equil_history_item10">Voorvullen reservoir</string>
+    <string name="equil_history_item11">Pomp terugspoelen</string>
+    <string name="equil_history_item12">Snelle bolus gestart</string>
+    <string name="equil_history_item13">Tijdelijk basaal gestart</string>
+    <string name="equil_history_item14">Tijdelijk basaal beëindigd</string>
+    <string name="equil_history_item15">Laag batterijniveau</string>
+    <string name="equil_history_item16">Batterij leeg!</string>
+    <string name="equil_history_item17">Power-on Reset</string>
+    <string name="equil_history_item18">Abnormale toediening gestopt</string>
+    <string name="equil_common_short_status_last_connection">Laatste verbinding: %1$d min geleden</string>
+    <string name="equil_common_short_status_last_bolus">Laatste bolus: %1$s @ %2$s</string>
+    <string name="equil_common_short_status_temp_basal">Tijdelijk: %1$s</string>
+    <string name="equil_common_short_status_extended_bolus">Verlengd: %1$s</string>
+    <string name="equil_common_short_status_reservoir">Reservoir: %1$sE</string>
     <string name="equil_common_overview_button_suspend_delivery">Onderbreken</string>
     <string name="equil_common_overview_button_resume_delivery">Insulinetoediening hervatten</string>
     <string name="equil_support_error">Firmware versie te laag. Niet ondersteund</string>
