--- a/plugins/automation/src/main/res/values/strings.xml
+++ b/plugins/automation/src/main/res/values/strings.xml
@@ -87,6 +87,18 @@
     <string name="cobcompared">COB %1$s %2$.0f</string>
     <string name="triggerHeartRate">Heart Rate</string>
     <string name="triggerHeartRateDesc">HR %1$s %2$.0f</string>
+    <string name="triggerSensorAgeLabel">Sensor age</string>
+    <string name="triggerSensorAgeDesc">Sensor age %1$s %2$.1f hour</string>
+    <string name="triggerCannulaAgeLabel">Cannula age</string>
+    <string name="triggerCannulaAgeDesc">Cannula age %1$s %2$.1f hour</string>    
+    <string name="triggerInsulinAgeLabel">Insulin age</string>
+    <string name="triggerInsulinAgeDesc">Insulin age %1$s %2$.1f hour</string>
+    <string name="triggerPumpBatteryAgeLabel">Pump battery age</string>
+    <string name="triggerPumpBatteryAgeDesc">Pump battery age %1$s %2$.1f hour</string>
+    <string name="triggerReservoirLevelLabel">Reservoir level</string>
+    <string name="triggerReservoirLevelDesc">Reservoir level %1$s %2$.0f</string>
+    <string name="triggerPumpBatteryLevelLabel">Pump battery level</string>
+    <string name="triggerPumpBatteryLevelDesc">Pump battery level %1$s %2$.0f</string>
     <string name="iob_u">IOB [U]:</string>
     <string name="distance_short">Dist [m]:</string>
     <string name="recurringTime">Recurring time</string>
