--- a/core/interfaces/src/main/res/values/strings.xml
+++ b/core/interfaces/src/main/res/values/strings.xml
@@ -65,5 +65,6 @@
     <string name="pref_show_date">Show Date</string>
     <string name="default_custom_watchface_comment">Default watchface, you can click on EXPORT WATCHFACE button to generate a template</string>
     <string name="wear_default_watchface">Default Watchface</string>
+    <string name="wear_more_watchfaces">More watchfaces</string>
 
 </resources>
