--- a/plugins/automation/src/main/res/values-fr-rFR/strings.xml
+++ b/plugins/automation/src/main/res/values-fr-rFR/strings.xml
@@ -87,6 +87,18 @@
     <string name="cobcompared">GA %1$s %2$.0f</string>
     <string name="triggerHeartRate">Fréquence Cardiaque</string>
     <string name="triggerHeartRateDesc">FC %1$s %2$.0f</string>
+    <string name="triggerSensorAgeLabel">Age capteur</string>
+    <string name="triggerSensorAgeDesc">Âge du capteur %1$s %2$.1f heure</string>
+    <string name="triggerCannulaAgeLabel">Âge canule</string>
+    <string name="triggerCannulaAgeDesc">Âge de canule %1$s %2$.1f heure</string>
+    <string name="triggerInsulinAgeLabel">Âge de l\'insuline</string>
+    <string name="triggerInsulinAgeDesc">Âge de l\'insuline %1$s %2$.1f heure</string>
+    <string name="triggerPumpBatteryAgeLabel">Age de la pile pompe</string>
+    <string name="triggerPumpBatteryAgeDesc">Âge de la pile pompe %1$s %2$.1f heure</string>
+    <string name="triggerReservoirLevelLabel">Niveau du réservoir</string>
+    <string name="triggerReservoirLevelDesc">Niveau de réservoir %1$s %2$.0f</string>
+    <string name="triggerPumpBatteryLevelLabel">Niveau de la pile pompe</string>
+    <string name="triggerPumpBatteryLevelDesc">Niveau de la pile pompe %1$s %2$.0f</string>
     <string name="iob_u">IA [U]:</string>
     <string name="distance_short">Dist [m]:</string>
     <string name="recurringTime">Période répétitive</string>
