--- a/ui/src/main/res/values-nb-rNO/strings.xml
+++ b/ui/src/main/res/values-nb-rNO/strings.xml
@@ -131,26 +131,23 @@
     <string name="a11y_only_on_watch">kun på klokke</string>
     <string name="a11y_only_on_phone">kun på telefon</string>
     <string name="quickwizard_settings">Innstillinger for hurtigknapp</string>
-    <string name="overview_edit_quickwizard_button_text">Knappetekst:</string>
-    <string name="overview_edit_quickwizard_carbs">Karbo:</string>
+    <string name="overview_edit_quickwizard_button_text">Knappetekst</string>
+    <string name="overview_edit_quickwizard_carbs">Karbo</string>
     <string name="overview_edit_quickwizard_valid">Gyldig:</string>
     <string name="overview_edit_quickwizard_list_activity_add">Legg til</string>
     <string name="overview_quickwizard_item_edit_button">Rediger</string>
-    <string name="overview_edit_quickwizard_show_on_device">Vis oppføring på enhet:</string>
-    <string name="overview_edit_quickwizard_use_bg">BS-beregning</string>
-    <string name="overview_edit_quickwizard_use_bolus_iob">Bolus IOB-beregning</string>
-    <string name="overview_edit_quickwizard_use_basal_iob">Basal IOB-beregning</string>
-    <string name="overview_edit_quickwizard_use_trend">Trend-beregning</string>
-    <string name="overview_edit_quickwizard_use_superbolus">Superbolus-beregning</string>
-    <string name="overview_edit_quickwizard_percentage">Prosent</string>
-    <string name="device_all">Alt</string>
-    <string name="device_phone">Telefon</string>
-    <string name="device_watch">Klokke</string>
-    <string name="positive_only">Bare positive</string>
-    <string name="negative_only">Bare negative</string>
-    <string name="overview_editquickwizard_usecob">COB-beregning</string>
-    <string name="overview_editquickwizard_usetemptarget">Beregning av midlertidig mål</string>
-    <string name="overview_editquickwizard_usepercentage">Prosent-beregning</string>
-    <string name="app_default">Standardverdi</string>
+    <string name="overview_edit_quickwizard_use_positive_iob_only">Kun positiv IOB</string>
+    <string name="overview_edit_quickwizard_superbolus">Superbolus</string>
+    <string name="overview_edit_quickwizard_percentage_to_high">Prosent er for høy!</string>
+    <string name="overview_editquickwizard_percentage">Prosent</string>
     <string name="a11y_drag_and_drop_handle">håndtering av dra-og-slipp</string>
+    <string name="additional_ecarbs">Legg til eKarbo</string>
+    <string name="overview_edit_quickwizard_useforcalculation">Bruk i beregning:</string>
+    <string name="constraints_violation">Brudd på begrensninger</string>
+    <string name="change_your_input">Endre dine inndata!</string>
+    <string-array name="yes_no_positiveonly_negativeonly">
+        <item>Begge</item>
+        <item>Kun positiv</item>
+        <item>Kun negativ</item>
+    </string-array>
 </resources>
