--- a/ui/src/main/res/values-ru-rRU/strings.xml
+++ b/ui/src/main/res/values-ru-rRU/strings.xml
@@ -131,26 +131,23 @@
     <string name="a11y_only_on_watch">только на часах</string>
     <string name="a11y_only_on_phone">только на телефоне</string>
     <string name="quickwizard_settings">Мастер быстрой настройки</string>
-    <string name="overview_edit_quickwizard_button_text">Текст на кнопке:</string>
-    <string name="overview_edit_quickwizard_carbs">Углеводы:</string>
+    <string name="overview_edit_quickwizard_button_text">Текст на кнопке</string>
+    <string name="overview_edit_quickwizard_carbs">Углеводы</string>
     <string name="overview_edit_quickwizard_valid">Верно:</string>
     <string name="overview_edit_quickwizard_list_activity_add">Добавить</string>
     <string name="overview_quickwizard_item_edit_button">Редактировать</string>
-    <string name="overview_edit_quickwizard_show_on_device">Показать запись на устройстве:</string>
-    <string name="overview_edit_quickwizard_use_bg">Вычисление ГК</string>
-    <string name="overview_edit_quickwizard_use_bolus_iob">Расчет активного инсулина IOB для болюса</string>
-    <string name="overview_edit_quickwizard_use_basal_iob">Расчет активного инсулина IOB для базала</string>
-    <string name="overview_edit_quickwizard_use_trend">Расчет тренда</string>
-    <string name="overview_edit_quickwizard_use_superbolus">Расчет суперболюса</string>
-    <string name="overview_edit_quickwizard_percentage">Процент</string>
-    <string name="device_all">Все</string>
-    <string name="device_phone">Телефон</string>
-    <string name="device_watch">Смарт-часы</string>
-    <string name="positive_only">Только положительные</string>
-    <string name="negative_only">Только отрицательные</string>
-    <string name="overview_editquickwizard_usecob">Вычисление активных углеводов COB</string>
-    <string name="overview_editquickwizard_usetemptarget">Расчет временного целевого значения</string>
-    <string name="overview_editquickwizard_usepercentage">Расчет процента</string>
-    <string name="app_default">Из настроек приложения</string>
+    <string name="overview_edit_quickwizard_use_positive_iob_only">Только положительный активный инсулин IOB</string>
+    <string name="overview_edit_quickwizard_superbolus">Суперболюс</string>
+    <string name="overview_edit_quickwizard_percentage_to_high">Слишком высокий процент!</string>
+    <string name="overview_editquickwizard_percentage">Процент</string>
     <string name="a11y_drag_and_drop_handle">перетаскиватель</string>
+    <string name="additional_ecarbs">Добавить eCarbs</string>
+    <string name="overview_edit_quickwizard_useforcalculation">Использовать для вычислений:</string>
+    <string name="constraints_violation">Нарушение ограничений</string>
+    <string name="change_your_input">Измените введенные данные!</string>
+    <string-array name="yes_no_positiveonly_negativeonly">
+        <item>Оба варианта</item>
+        <item>Только положительный</item>
+        <item>Только отрицательный</item>
+    </string-array>
 </resources>
