--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -159,7 +159,7 @@
     <string name="overview_quickwizard_item_edit_button">Edit</string>
     <string name="overview_edit_quickwizard_use_positive_iob_only">Positive IOB only</string>
     <string name="overview_edit_quickwizard_superbolus">Superbolus</string>
-    <string name="overview_edit_quickwizard_percentage_to_high">Percentage to high!</string>
+    <string name="overview_edit_quickwizard_percentage_too_high">Percentage too high!</string>
     <string name="overview_editquickwizard_percentage">Percentage</string>
     <string name="a11y_drag_and_drop_handle">drag and drop handle</string>
     <string name="additional_ecarbs">Add eCarbs</string>
