--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <!--     Activities-->
     <string name="activity_monitor">Activity monitor</string>
     <string name="do_you_want_reset_stats">Do you want to reset activity stats?</string>
-    <string name="do_you_want_reset_tdd_stats">Do you want to reset TDD stats?</string>
+    <string name="do_you_want_recalculate_tdd_stats">Do you want to recalculate TDD stats?</string>
     <string name="statistics">Statistics</string>
     <string name="calculation_in_progress">Calculation in progress</string>
     <string name="invalid_age">Invalid age entry</string>
@@ -167,6 +167,7 @@
     <string name="constraints_violation">Constraints violation</string>
     <string name="change_your_input">Change your input!</string>
     <string name="confirm_treatment">Please confirm treatment</string>
+    <string name="recalculate">Recalculate</string>
 
     <string-array name="yes_no_positiveonly_negativeonly">
         <item>Both</item>
