--- a/ui/src/main/res/values-it-rIT/strings.xml
+++ b/ui/src/main/res/values-it-rIT/strings.xml
@@ -17,7 +17,7 @@
     <!--     Activities-->
     <string name="activity_monitor">Monitor attività</string>
     <string name="do_you_want_reset_stats">Vuoi resettare le statistiche sull\'attività?</string>
-    <string name="do_you_want_reset_tdd_stats">Vuoi resettare le statistiche TDD?</string>
+    <string name="do_you_want_recalculate_tdd_stats">Vuoi ricalcolare le statistiche TDD?</string>
     <string name="statistics">Statistiche</string>
     <string name="calculation_in_progress">Calcolo in corso</string>
     <string name="invalid_age">Inserimento età non valido</string>
@@ -138,13 +138,15 @@
     <string name="overview_quickwizard_item_edit_button">Modifica</string>
     <string name="overview_edit_quickwizard_use_positive_iob_only">Solo IOB positivo</string>
     <string name="overview_edit_quickwizard_superbolus">Superbolo</string>
-    <string name="overview_edit_quickwizard_percentage_to_high">Percentuale troppo alta!</string>
+    <string name="overview_edit_quickwizard_percentage_too_high">Percentuale troppo alta!</string>
     <string name="overview_editquickwizard_percentage">Percentuale</string>
     <string name="a11y_drag_and_drop_handle">trascina e rilascia</string>
     <string name="additional_ecarbs">Aggiungi eCarbs</string>
     <string name="overview_edit_quickwizard_useforcalculation">Utilizzati per il calcolo:</string>
     <string name="constraints_violation">Violazione dei vincoli</string>
     <string name="change_your_input">Cambia il tuo input!</string>
+    <string name="confirm_treatment">Si prega di confermare il trattamento</string>
+    <string name="recalculate">Ricalcola</string>
     <string-array name="yes_no_positiveonly_negativeonly">
         <item>Entrambi</item>
         <item>Solo positivo</item>
