--- a/ui/src/main/res/values-tr-rTR/strings.xml
+++ b/ui/src/main/res/values-tr-rTR/strings.xml
@@ -17,7 +17,6 @@
     <!--     Activities-->
     <string name="activity_monitor">Aktivite monitörü</string>
     <string name="do_you_want_reset_stats">Etkinlik istatistiklerini sıfırlamak istiyor musunuz?</string>
-    <string name="do_you_want_reset_tdd_stats">GTD istatistiklerini sıfırlamak istiyor musunuz?</string>
     <string name="statistics">İstatistikler</string>
     <string name="calculation_in_progress">Hesaplanıyor</string>
     <string name="invalid_age">Geçersiz yaş girişi</string>
@@ -138,13 +137,14 @@
     <string name="overview_quickwizard_item_edit_button">Düzenle</string>
     <string name="overview_edit_quickwizard_use_positive_iob_only">Yalnızca pozitif AİNS</string>
     <string name="overview_edit_quickwizard_superbolus">Süperbolus</string>
-    <string name="overview_edit_quickwizard_percentage_to_high">Yüzde çok yüksek!</string>
+    <string name="overview_edit_quickwizard_percentage_too_high">Yüzde çok yüksek!</string>
     <string name="overview_editquickwizard_percentage">Yüzde</string>
     <string name="a11y_drag_and_drop_handle">sürükle ve bırak kolu</string>
     <string name="additional_ecarbs">yKarb ekle</string>
     <string name="overview_edit_quickwizard_useforcalculation">Hesaplama için kullanın:</string>
     <string name="constraints_violation">Kısıtlamalar ihlali</string>
     <string name="change_your_input">Girişinizi değiştirin!</string>
+    <string name="confirm_treatment">Lütfen tedaviyi onaylayın</string>
     <string-array name="yes_no_positiveonly_negativeonly">
         <item>İkisi de</item>
         <item>Sadece pozitif</item>
