--- a/ui/src/main/res/values-cs-rCZ/strings.xml
+++ b/ui/src/main/res/values-cs-rCZ/strings.xml
@@ -17,7 +17,7 @@
     <!--     Activities-->
     <string name="activity_monitor">Monitor aktivity</string>
     <string name="do_you_want_reset_stats">Chcete resetovat statistiky aktivity?</string>
-    <string name="do_you_want_reset_tdd_stats">Chcete resetovat statistiky CDD?</string>
+    <string name="do_you_want_recalculate_tdd_stats">Chcete přepočítat statistiky CDD?</string>
     <string name="statistics">Statistika</string>
     <string name="calculation_in_progress">Probíhá výpočet</string>
     <string name="invalid_age">Neplatná položka věku</string>
@@ -138,13 +138,15 @@
     <string name="overview_quickwizard_item_edit_button">Upravit</string>
     <string name="overview_edit_quickwizard_use_positive_iob_only">Pouze kladný IOB</string>
     <string name="overview_edit_quickwizard_superbolus">Superbolus</string>
-    <string name="overview_edit_quickwizard_percentage_to_high">Procento vysoké!</string>
+    <string name="overview_edit_quickwizard_percentage_too_high">Procento je příliš vysoké!</string>
     <string name="overview_editquickwizard_percentage">Procento</string>
     <string name="a11y_drag_and_drop_handle">Režim „Táhni a pusť“</string>
     <string name="additional_ecarbs">Přidat eSacharidy</string>
     <string name="overview_edit_quickwizard_useforcalculation">Použít pro kalkulaci:</string>
     <string name="constraints_violation">Mimo povolený rozsah</string>
     <string name="change_your_input">Změňte zadání!</string>
+    <string name="confirm_treatment">Potvrďte prosím záznam</string>
+    <string name="recalculate">Přepočítat</string>
     <string-array name="yes_no_positiveonly_negativeonly">
         <item>Oba</item>
         <item>Pouze kladné</item>
