--- a/ui/src/main/res/values-fr-rFR/strings.xml
+++ b/ui/src/main/res/values-fr-rFR/strings.xml
@@ -17,7 +17,7 @@
     <!--     Activities-->
     <string name="activity_monitor">Moniteur d\'activité</string>
     <string name="do_you_want_reset_stats">Voulez-vous réinitialiser les statistiques d\'activité ?</string>
-    <string name="do_you_want_reset_tdd_stats">Voulez-vous réinitialiser les statistiques de DTQ ?</string>
+    <string name="do_you_want_recalculate_tdd_stats">Voulez-vous recalculer les statistiques de DTQ ?</string>
     <string name="statistics">Statistiques</string>
     <string name="calculation_in_progress">Calcul en cours</string>
     <string name="invalid_age">Âge invalide</string>
@@ -136,13 +136,17 @@
     <string name="overview_edit_quickwizard_valid">Valide:</string>
     <string name="overview_edit_quickwizard_list_activity_add">Ajouter</string>
     <string name="overview_quickwizard_item_edit_button">Éditer</string>
+    <string name="overview_edit_quickwizard_use_positive_iob_only">IA positive uniquement</string>
     <string name="overview_edit_quickwizard_superbolus">Superbolus</string>
+    <string name="overview_edit_quickwizard_percentage_too_high">Pourcentage trop élevé !</string>
     <string name="overview_editquickwizard_percentage">Pourcentage</string>
     <string name="a11y_drag_and_drop_handle">glissez déposez ici</string>
     <string name="additional_ecarbs">Ajouter eGlucides</string>
     <string name="overview_edit_quickwizard_useforcalculation">Utiliser pour le calcul:</string>
     <string name="constraints_violation">Violation des restrictions</string>
     <string name="change_your_input">Changez votre entrée !</string>
+    <string name="confirm_treatment">Veuillez confirmer le traitement</string>
+    <string name="recalculate">Recalculer</string>
     <string-array name="yes_no_positiveonly_negativeonly">
         <item>Les deux</item>
         <item>Positif uniquement</item>
