--- a/ui/src/main/res/values-iw-rIL/strings.xml
+++ b/ui/src/main/res/values-iw-rIL/strings.xml
@@ -17,7 +17,7 @@
     <!--     Activities-->
     <string name="activity_monitor">מוניטור פעילות</string>
     <string name="do_you_want_reset_stats">האם ברצונכם לאפס את הסטטיסטיקות הפעילות?</string>
-    <string name="do_you_want_reset_tdd_stats">האם ברצונכם לאפס את הסטטיסטיקות (TDD)?</string>
+    <string name="do_you_want_recalculate_tdd_stats">האם ברצונכם לאפס את סטטיסטיקת המינונים היומיים הכוללים?</string>
     <string name="statistics">סטטיסטיקה</string>
     <string name="calculation_in_progress">מבצע חישוב</string>
     <string name="invalid_age">רשומת גיל לא חוקית</string>
@@ -134,5 +134,8 @@
     <string name="overview_edit_quickwizard_valid">תקין:</string>
     <string name="overview_edit_quickwizard_list_activity_add">הוספה</string>
     <string name="overview_quickwizard_item_edit_button">עריכה</string>
+    <string name="overview_edit_quickwizard_percentage_too_high">האחוזים גבוהים מדי!</string>
     <string name="a11y_drag_and_drop_handle">לחצן גרירה</string>
+    <string name="confirm_treatment">אשר טיפול</string>
+    <string name="recalculate">חשב מחדש</string>
 </resources>
