--- a/ui/src/main/res/values-nb-rNO/strings.xml
+++ b/ui/src/main/res/values-nb-rNO/strings.xml
@@ -17,7 +17,7 @@
     <!--     Activities-->
     <string name="activity_monitor">Aktivitetsmonitor</string>
     <string name="do_you_want_reset_stats">Vil du tilbakestille aktivitetsstatistikken?</string>
-    <string name="do_you_want_reset_tdd_stats">Vil du tilbakestille TDD statistikken?</string>
+    <string name="do_you_want_recalculate_tdd_stats">Vil du rekalkulere TDD-statistikken?</string>
     <string name="statistics">Statistikk</string>
     <string name="calculation_in_progress">Beregning pågår</string>
     <string name="invalid_age">Ugyldig alder</string>
@@ -138,13 +138,15 @@
     <string name="overview_quickwizard_item_edit_button">Rediger</string>
     <string name="overview_edit_quickwizard_use_positive_iob_only">Kun positiv IOB</string>
     <string name="overview_edit_quickwizard_superbolus">Superbolus</string>
-    <string name="overview_edit_quickwizard_percentage_to_high">Prosent er for høy!</string>
+    <string name="overview_edit_quickwizard_percentage_too_high">Prosent er for høy!</string>
     <string name="overview_editquickwizard_percentage">Prosent</string>
     <string name="a11y_drag_and_drop_handle">håndtering av dra-og-slipp</string>
     <string name="additional_ecarbs">Legg til eKarbo</string>
     <string name="overview_edit_quickwizard_useforcalculation">Bruk i beregning:</string>
     <string name="constraints_violation">Brudd på begrensninger</string>
     <string name="change_your_input">Endre dine inndata!</string>
+    <string name="confirm_treatment">Bekreft behandling</string>
+    <string name="recalculate">Rekalkuler</string>
     <string-array name="yes_no_positiveonly_negativeonly">
         <item>Begge</item>
         <item>Kun positiv</item>
