--- a/ui/src/main/res/values-sk-rSK/strings.xml
+++ b/ui/src/main/res/values-sk-rSK/strings.xml
@@ -17,7 +17,7 @@
     <!--     Activities-->
     <string name="activity_monitor">Monitor aktivity</string>
     <string name="do_you_want_reset_stats">Chcete resetovať štatistiky aktivity?</string>
-    <string name="do_you_want_reset_tdd_stats">Chcete resetovať štatistiky CDD?</string>
+    <string name="do_you_want_recalculate_tdd_stats">Chcete prepočítať štatistiky CDD?</string>
     <string name="statistics">Štatistika</string>
     <string name="calculation_in_progress">Prebieha výpočet</string>
     <string name="invalid_age">Neplatný záznam veku</string>
@@ -138,13 +138,15 @@
     <string name="overview_quickwizard_item_edit_button">Upraviť</string>
     <string name="overview_edit_quickwizard_use_positive_iob_only">Iba kladný IOB</string>
     <string name="overview_edit_quickwizard_superbolus">Superbolus</string>
-    <string name="overview_edit_quickwizard_percentage_to_high">Percento vysoké!</string>
+    <string name="overview_edit_quickwizard_percentage_too_high">Percento je príliš vysoké!</string>
     <string name="overview_editquickwizard_percentage">Percento</string>
     <string name="a11y_drag_and_drop_handle">Režim \"Potiahni a pusť\"</string>
     <string name="additional_ecarbs">Pridať eSacharidy</string>
     <string name="overview_edit_quickwizard_useforcalculation">Použiť pre kalkuláciu:</string>
     <string name="constraints_violation">Mimo povolený rozsah</string>
     <string name="change_your_input">Zmeňte zadanie!</string>
+    <string name="confirm_treatment">Prosím potvrďte ošetrenie</string>
+    <string name="recalculate">Prepočítať</string>
     <string-array name="yes_no_positiveonly_negativeonly">
         <item>Oba</item>
         <item>Iba kladné</item>
